# minimal_llm_evals

./: .gitignore  README.md  README_ACCELERATOR.md  accelerate_config.yaml  init.sh  main.py  pyproject.toml  run_vllm.sh  run_with_accelerate.py  run_with_vllm.py
notebooks/: explore_few_tasks.ipynb  explore_metrics.ipynb  explore_tasks.ipynb  run_eval.ipynb
src/benchmarks/: __init__.py  anthropic_hh.py  base.py  gsm8k.py
src/evaluation/: __init__.py  base.py
src/models/: api_model.py  base.py  hf_local_model.py
