[project]
name = "evals"
version = "0.1.0"
description = "A minimal evaluation framework for language models supporting both local and API-based inference with multi-GPU acceleration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "datasets>=2.12.0",
    "requests>=2.28.0",
    "numpy>=1.21.0",
    "regex>=2023.0.0",
    "vllm>=0.2.0",
    "huggingface-hub>=0.15.0",
    "tokenizers>=0.13.0",
    "safetensors>=0.3.0",
    "psutil>=5.9.0",
    "tqdm>=4.64.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",
    "notebook>=6.5.0",
    "jupyterlab>=3.6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
